--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Http/Helpers/permissions.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
