--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.6",
+        "risul/laravel-like-comment": "^2.0",
         "unisharp/laravel-filemanager": "~1.8"
     },
     "require-dev": {
