--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "barryvdh/laravel-dompdf": "^0.8.2",
+        "chumper/zipper": "^1.0",
         "consoletvs/charts": "5.*",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.6",
+        "niklasravnsborg/laravel-pdf": "^2.0",
         "risul/laravel-like-comment": "^2.0",
         "unisharp/laravel-filemanager": "~1.8"
     },
